// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OtpCode render should correctly render Otp component 1`] = `
<div>
  <otp-form-stub></otp-form-stub>
</div>
`;

exports[`OtpCode render should render opt form 1`] = `
<div>
  <otp-form-stub></otp-form-stub>
</div>
`;

exports[`OtpCode render should render recover form 1`] = `
<div>
  <recover-form-stub></recover-form-stub>
</div>
`;
